Project prisma_export {
  database_type: 'PostgreSQL'
}

/* =========================
   ENUMS (Prisma enums)
========================= */
Enum CardStatus {
  ON_REQUEST
  IN_OFFICE
  IN_TRANSIT
  IN_STATION
  LOST
  DAMAGED
  SOLD_ACTIVE
  SOLD_INACTIVE
}

Enum TransactionStatus {
  Success
  Failed
  Pending
}

Enum StockMovementType {
  IN
  OUT
}

Enum StockMovementStatus {
  PENDING
  APPROVED
  REJECTED
}

Enum FilePurpose {
  GENERAL
  LAST_REDEEM
  BARCODE_IMAGE
}

/* =========================
   TABLES (sesuai @@map)
========================= */

Table roles {
  role_id uuid [pk, note: "Role.id (@map role_id)"]
  role_code varchar [not null, unique, note: "Role.roleCode (unique)"]
  role_name varchar [not null, note: "Role.roleName"]
  description varchar [note: "Role.description (nullable)"]
  is_active boolean [not null, default: true, note: "Role.isActive (default true)"]
  created_at timestamp [not null, default: `now()`, note: "Role.createdAt"]
  created_by uuid [note: "Role.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Role.updatedAt"]
  updated_by uuid [note: "Role.updatedBy (nullable)"]
  deleted_at timestamp [note: "Role.deletedAt (nullable)"]
  deleted_by uuid [note: "Role.deletedBy (nullable)"]
}

Table users {
  user_id uuid [pk, note: "User.id (@map user_id)"]
  full_name varchar [not null, note: "User.fullName"]
  nip varchar [unique, note: "User.nip (nullable, unique)"]
  username varchar [not null, unique, note: "User.username (unique)"]
  password_hash varchar [not null, note: "User.passwordHash (@map password_hash)"]
  email varchar [note: "User.email (nullable)"]
  phone varchar [note: "User.phone (nullable)"]
  role_id uuid [not null, note: "User.roleId FK -> roles.role_id"]
  station_id uuid [note: "User.stationId (nullable) FK -> stations.station_id"]
  is_active boolean [not null, default: true, note: "User.isActive (default true)"]
  last_login timestamp [note: "User.lastLogin (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "User.createdAt"]
  created_by uuid [note: "User.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "User.updatedAt"]
  updated_by uuid [note: "User.updatedBy (nullable)"]
  deleted_at timestamp [note: "User.deletedAt (nullable)"]
  deleted_by uuid [note: "User.deletedBy (nullable)"]
}

Table card_categories {
  category_id uuid [pk, note: "CardCategory.id (@map category_id)"]
  category_code varchar [not null, unique, note: "CardCategory.categoryCode (unique)"]
  category_name varchar [not null, note: "CardCategory.categoryName"]
  description varchar [note: "CardCategory.description (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "CardCategory.createdAt"]
  created_by uuid [note: "CardCategory.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardCategory.updatedAt"]
  updated_by uuid [note: "CardCategory.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardCategory.deletedAt (nullable)"]
  deleted_by uuid [note: "CardCategory.deletedBy (nullable)"]
}

Table card_types {
  type_id uuid [pk, note: "CardType.id (@map type_id)"]
  type_code varchar [not null, unique, note: "CardType.typeCode (unique)"]
  type_name varchar [not null, note: "CardType.typeName"]
  route_description varchar [note: "CardType.routeDescription (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "CardType.createdAt"]
  created_by uuid [note: "CardType.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardType.updatedAt"]
  updated_by uuid [note: "CardType.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardType.deletedAt (nullable)"]
  deleted_by uuid [note: "CardType.deletedBy (nullable)"]
}

Table stations {
  station_id uuid [pk, note: "Station.id (@map station_id)"]
  station_code varchar [not null, unique, note: "Station.stationCode (unique)"]
  station_name varchar [not null, note: "Station.stationName"]
  location varchar [note: "Station.location (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "Station.createdAt"]
  created_by uuid [note: "Station.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Station.updatedAt"]
  updated_by uuid [note: "Station.updatedBy (nullable)"]
  deleted_at timestamp [note: "Station.deletedAt (nullable)"]
  deleted_by uuid [note: "Station.deletedBy (nullable)"]
}

Table card_products {
  card_product_id uuid [pk, note: "CardProduct.id (@map card_product_id)"]
  category_id uuid [not null, note: "CardProduct.categoryId FK -> card_categories.category_id"]
  type_id uuid [not null, note: "CardProduct.typeId FK -> card_types.type_id"]
  serial_template varchar [not null, note: "CardProduct.serialTemplate"]
  total_quota int [not null, note: "CardProduct.totalQuota"]
  masa_berlaku int [not null, note: "CardProduct.masaBerlaku"]
  price decimal(15,2) [not null, note: "CardProduct.price @db.Decimal(15,2)"]
  is_active boolean [not null, default: true, note: "CardProduct.isActive (default true)"]
  created_at timestamp [not null, default: `now()`, note: "CardProduct.createdAt"]
  created_by uuid [note: "CardProduct.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardProduct.updatedAt"]
  updated_by uuid [note: "CardProduct.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardProduct.deletedAt (nullable)"]
  deleted_by uuid [note: "CardProduct.deletedBy (nullable)"]

  indexes {
    (category_id, type_id) [unique, name: "unique_category_type", note: "Prisma @@unique([categoryId,typeId])"]
    (category_id, type_id) [name: "index_category_type", note: "Prisma @@index([categoryId,typeId])"]
  }
}

Table members {
  member_id uuid [pk, note: "Member.id (@map member_id)"]
  member_name varchar [not null, note: "Member.name (@map member_name)"]
  identity_number varchar [not null, unique, note: "Member.identityNumber (unique)"]
  nationality varchar [not null, default: "INDONESIA", note: "Member.nationality (default INDONESIA)"]
  email varchar [note: "Member.email (nullable)"]
  phone varchar [note: "Member.phone (nullable)"]
  nipp_kai varchar [note: "Member.nippKai (nullable)"]
  gender varchar [note: "Member.gender (nullable)"]
  alamat varchar [note: "Member.alamat (nullable)"]
  notes varchar [note: "Member.notes (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "Member.createdAt"]
  created_by uuid [note: "Member.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Member.updatedAt"]
  updated_by uuid [note: "Member.updatedBy (nullable)"]
  deleted_at timestamp [note: "Member.deletedAt (nullable)"]
  deleted_by uuid [note: "Member.deletedBy (nullable)"]
}

Table file_object {
  file_id uuid [pk, note: "FileObject.id (@map file_id)"]
  original_name text [not null, note: "FileObject.originalName"]
  stored_name text [note: "FileObject.storedName (nullable)"]
  relative_path text [not null, unique, note: "FileObject.relativePath (unique)"]
  mime_type text [not null, note: "FileObject.mimeType"]
  size_bytes int [note: "FileObject.sizeBytes (nullable)"]
  checksum_sha256 text [note: "FileObject.checksumSha256 (nullable)"]
  purpose FilePurpose [not null, default: "GENERAL", note: "FileObject.purpose (default GENERAL)"]
  created_at timestamp [not null, default: `now()`, note: "FileObject.createdAt"]
  created_by uuid [note: "FileObject.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "FileObject.updatedAt"]
  updated_by uuid [note: "FileObject.updatedBy (nullable)"]
  deleted_at timestamp [note: "FileObject.deletedAt (nullable)"]
  deleted_by uuid [note: "FileObject.deletedBy (nullable)"]
}

Table cards {
  card_id uuid [pk, note: "Card.id (@map card_id)"]
  serial_number varchar [not null, unique, note: "Card.serialNumber (unique)"]
  file_object_id uuid [note: "Card.fileObjectId (nullable) FK -> file_object.file_id"]
  member_id uuid [note: "Card.memberId (nullable) FK -> members.member_id (onDelete: Restrict)"]
  user_id uuid [note: "Card.userId (nullable) FK -> users.user_id (onDelete: Restrict)"]
  card_product_id uuid [not null, note: "Card.cardProductId FK -> card_products.card_product_id"]
  quota_ticket int [not null, default: 0, note: "Card.quotaTicket (default 0)"]
  purchase_date timestamp [note: "Card.purchaseDate (nullable)"]
  expired_date timestamp [note: "Card.expiredDate (nullable)"]
  status_card CardStatus [not null, default: "IN_OFFICE", note: "Card.status (default IN_OFFICE)"]
  created_at timestamp [not null, default: `now()`, note: "Card.createdAt"]
  created_by uuid [note: "Card.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Card.updatedAt"]
  updated_by uuid [note: "Card.updatedBy (nullable)"]
  deleted_at timestamp [note: "Card.deletedAt (nullable)"]
  deleted_by uuid [note: "Card.deletedBy (nullable)"]

  indexes {
    (card_product_id, serial_number) [note: "Prisma @@index([cardProductId, serialNumber])"]
  }
}

Table card_inventory {
  inventory_id uuid [pk, note: "CardInventory.id (@map inventory_id)"]
  category_id uuid [not null, note: "CardInventory.categoryId FK -> card_categories.category_id"]
  type_id uuid [not null, note: "CardInventory.typeId FK -> card_types.type_id"]
  station_id uuid [note: "CardInventory.stationId (nullable) FK -> stations.station_id"]
  card_beredar int [not null, default: 0, note: "CardInventory.cardBeredar (default 0)"]
  card_terjual_aktif int [not null, default: 0, note: "CardInventory.cardAktif (default 0)"]
  card_terjual_nonaktif int [not null, default: 0, note: "CardInventory.cardNonAktif (default 0)"]
  card_belum_terjual int [not null, default: 0, note: "CardInventory.cardBelumTerjual (default 0)"]
  card_office int [default: 0, note: "CardInventory.cardOffice (nullable di Prisma, default 0)"]
  created_at timestamp [not null, default: `now()`, note: "CardInventory.createdAt"]
  created_by uuid [note: "CardInventory.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardInventory.updatedAt"]
  updated_by uuid [note: "CardInventory.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardInventory.deletedAt (nullable)"]
  deleted_by uuid [note: "CardInventory.deletedBy (nullable)"]

  indexes {
    (category_id, type_id, station_id) [unique, name: "unique_category_type_station", note: "Prisma @@unique([categoryId,typeId,stationId])"]
    (category_id, type_id, station_id) [name: "index_category_type_station", note: "Prisma @@index([categoryId,typeId,stationId])"]
  }
}

Table card_stock_movements {
  movement_id uuid [pk, note: "CardStockMovement.id (@map movement_id)"]
  movement_at timestamp [not null, note: "CardStockMovement.movementAt"]
  movement_type StockMovementType [not null, note: "CardStockMovement.type (@map movement_type)"]
  status StockMovementStatus [not null, default: "APPROVED", note: "CardStockMovement.status (default APPROVED)"]

  category_id uuid [not null, note: "CardStockMovement.categoryId FK -> card_categories.category_id"]
  type_id uuid [not null, note: "CardStockMovement.typeId FK -> card_types.type_id"]
  quantity int [not null, note: "CardStockMovement.quantity"]
  note varchar [note: "CardStockMovement.note (nullable)"]

  station_id uuid [note: "CardStockMovement.stationId (nullable) FK -> stations.station_id; OUT wajib, IN boleh null (office)"]

  // Prisma String[] @db.Text dengan default []
  sent_serial_numbers text[] [not null, default: `'{}'`, note: "Serial dikirim (OUT)"]
  received_serial_numbers text[] [not null, default: `'{}'`, note: "Serial diterima (hasil validasi)"]
  lost_serial_numbers text[] [not null, default: `'{}'`, note: "Serial hilang (hasil validasi)"]
  damaged_serial_numbers text[] [not null, default: `'{}'`, note: "Serial rusak (hasil validasi)"]

  validated_by uuid [note: "Validator userId (nullable)"]
  validated_at timestamp [note: "Waktu validasi (nullable)"]

  created_at timestamp [not null, default: `now()`, note: "CardStockMovement.createdAt"]
  created_by uuid [note: "CardStockMovement.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardStockMovement.updatedAt"]
  updated_by uuid [note: "CardStockMovement.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardStockMovement.deletedAt (nullable)"]
  deleted_by uuid [note: "CardStockMovement.deletedBy (nullable)"]

  indexes {
    (movement_type, status, movement_at) [note: "Prisma @@index([type, status, movementAt])"]
  }
}

Table card_purchases {
  purchase_id uuid [pk, note: "CardPurchase.id (@map purchase_id)"]
  card_id uuid [not null, note: "CardPurchase.cardId FK -> cards.card_id (onDelete: Restrict)"]
  member_id uuid [note: "CardPurchase.memberId (nullable) FK -> members.member_id (onDelete: Restrict)"]
  operator_id uuid [not null, note: "CardPurchase.operatorId FK -> users.user_id"]
  station_id uuid [not null, note: "CardPurchase.stationId FK -> stations.station_id"]
  edc_reference_number varchar [not null, unique, note: "CardPurchase.edcReferenceNumber (unique)"]
  purchase_date timestamp [not null, note: "CardPurchase.purchaseDate"]
  price decimal(15,2) [not null, note: "CardPurchase.price @db.Decimal(15,2)"]
  notes varchar [note: "CardPurchase.notes (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "CardPurchase.createdAt"]
  created_by uuid [note: "CardPurchase.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardPurchase.updatedAt"]
  updated_by uuid [note: "CardPurchase.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardPurchase.deletedAt (nullable)"]
  deleted_by uuid [note: "CardPurchase.deletedBy (nullable)"]

  indexes {
    (purchase_date) [note: "Prisma @@index([purchaseDate])"]
    (station_id, purchase_date) [note: "Prisma @@index([stationId, purchaseDate])"]
    (operator_id, purchase_date) [note: "Prisma @@index([operatorId, purchaseDate])"]
  }
}

Table card_redeem {
  redeem_id uuid [pk, note: "Redeem.id (@map redeem_id)"]
  card_id uuid [not null, note: "Redeem.cardId FK -> cards.card_id"]
  transaction_number varchar [not null, unique, note: "Redeem.transactionNumber (unique)"]
  operator_id uuid [not null, note: "Redeem.operatorId FK -> users.user_id"]
  station_id uuid [not null, note: "Redeem.stationId FK -> stations.station_id"]
  shift_date timestamp [not null, note: "Redeem.shiftDate"]
  transaction_status TransactionStatus [not null, default: "Success", note: "Redeem.status (default Success)"]
  notes varchar [note: "Redeem.notes (nullable)"]
  file_object_id uuid [note: "Redeem.fileObjectId (nullable) FK -> file_object.file_id"]
  created_at timestamp [not null, default: `now()`, note: "Redeem.createdAt"]
  created_by uuid [note: "Redeem.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Redeem.updatedAt"]
  updated_by uuid [note: "Redeem.updatedBy (nullable)"]
  deleted_at timestamp [note: "Redeem.deletedAt (nullable)"]
  deleted_by uuid [note: "Redeem.deletedBy (nullable)"]

  indexes {
    (transaction_number) [name: "idx_redeem_transaction_number", note: "Prisma @@index([transactionNumber])"]
  }
}

Table card_usage_logs {
  log_id uuid [pk, note: "CardUsageLog.id (@map log_id)"]
  card_id uuid [not null, note: "CardUsageLog.cardId FK -> cards.card_id (onDelete: Cascade)"]
  quota_used int [not null, default: 0, note: "CardUsageLog.quotaUsed (default 0)"]
  remaining_quota int [not null, note: "CardUsageLog.remainingQuota"]
  usage_date timestamp [not null, note: "CardUsageLog.usageDate"]
  created_at timestamp [not null, default: `now()`, note: "CardUsageLog.createdAt"]
  created_by uuid [note: "CardUsageLog.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "CardUsageLog.updatedAt"]
  updated_by uuid [note: "CardUsageLog.updatedBy (nullable)"]
  deleted_at timestamp [note: "CardUsageLog.deletedAt (nullable)"]
  deleted_by uuid [note: "CardUsageLog.deletedBy (nullable)"]
}

Table inbox {
  inbox_id uuid [pk, note: "Inbox.id (@map inbox_id)"]
  title varchar [not null, note: "Inbox.title"]
  message varchar [not null, note: "Inbox.message"]
  is_read boolean [not null, default: false, note: "Inbox.isRead (default false)"]
  read_at timestamp [note: "Inbox.readAt (nullable)"]
  sent_at timestamp [not null, default: `now()`, note: "Inbox.sentAt"]
  sent_to uuid [note: "Inbox.sentTo (nullable) FK -> users.user_id"]
  sent_by uuid [note: "Inbox.sentBy (nullable) FK -> users.user_id"]
  station_id uuid [note: "Inbox.stationId (nullable) FK -> stations.station_id"]
  type varchar [note: "Inbox.type (nullable)"]
  payload jsonb [note: "Inbox.payload (nullable)"]
  created_at timestamp [not null, default: `now()`, note: "Inbox.createdAt"]
  created_by uuid [note: "Inbox.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "Inbox.updatedAt"]
  updated_by uuid [note: "Inbox.updatedBy (nullable)"]
  deleted_at timestamp [note: "Inbox.deletedAt (nullable)"]
  deleted_by uuid [note: "Inbox.deletedBy (nullable)"]

  indexes {
    (sent_to, is_read, created_at) [name: "idx_inbox_sent_to_read_created", note: "Prisma @@index([sentTo, isRead, createdAt])"]
  }
}

Table password_reset_tokens {
  token_id uuid [pk, note: "PasswordResetToken.id (@map token_id)"]
  user_id uuid [not null, note: "PasswordResetToken.userId FK -> users.user_id (onDelete: Cascade)"]
  token varchar [not null, unique, note: "PasswordResetToken.token (unique)"]
  expires_at timestamp [not null, note: "PasswordResetToken.expiresAt"]
  used boolean [not null, default: false, note: "PasswordResetToken.used (default false)"]
  created_at timestamp [not null, default: `now()`, note: "PasswordResetToken.createdAt"]
  created_by uuid [note: "PasswordResetToken.createdBy (nullable)"]
  updated_at timestamp [not null, default: `now()`, note: "PasswordResetToken.updatedAt"]
  updated_by uuid [note: "PasswordResetToken.updatedBy (nullable)"]
  deleted_at timestamp [note: "PasswordResetToken.deletedAt (nullable)"]
  deleted_by uuid [note: "PasswordResetToken.deletedBy (nullable)"]
}

/* =========================
   REFERENCES (RELATIONS)
========================= */

Ref: users.role_id > roles.role_id
Ref: users.station_id > stations.station_id

Ref: card_products.category_id > card_categories.category_id
Ref: card_products.type_id > card_types.type_id

Ref: cards.card_product_id > card_products.card_product_id
Ref: cards.member_id > members.member_id
Ref: cards.user_id > users.user_id
Ref: cards.file_object_id > file_object.file_id

Ref: card_inventory.category_id > card_categories.category_id
Ref: card_inventory.type_id > card_types.type_id
Ref: card_inventory.station_id > stations.station_id

Ref: card_stock_movements.category_id > card_categories.category_id
Ref: card_stock_movements.type_id > card_types.type_id
Ref: card_stock_movements.station_id > stations.station_id

Ref: card_purchases.card_id > cards.card_id
Ref: card_purchases.member_id > members.member_id
Ref: card_purchases.operator_id > users.user_id
Ref: card_purchases.station_id > stations.station_id

Ref: card_redeem.card_id > cards.card_id
Ref: card_redeem.operator_id > users.user_id
Ref: card_redeem.station_id > stations.station_id
Ref: card_redeem.file_object_id > file_object.file_id

Ref: card_usage_logs.card_id > cards.card_id

Ref: inbox.sent_to > users.user_id
Ref: inbox.sent_by > users.user_id
Ref: inbox.station_id > stations.station_id

Ref: password_reset_tokens.user_id > users.user_id

